# rusty-shelter

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: code_coverage.yml  lints.yml  release-please.yml  security_audit.yml  tests.yml
console/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json
console-dioxus/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
console-dioxus/public/: global.css
console-dioxus/src/: lib.rs  main.rs
console-dioxus/src/components/: index.rs  login.rs
console/src/: lib.rs  main.rs
console/src/components/: footer.rs  header.rs  mod.rs
fast-cdc/: CHANGELOG.md  Cargo.toml  README.md
fast-cdc/benches/: fast_cdc.rs
fast-cdc/src/: lib.rs
fast-cdc/tests/: integration_tests.rs
shelter-block/: CHANGELOG.md  Cargo.toml  README.md
shelter-block/src/: block_address.rs  block_id.rs  block_type.rs  lib.rs  multihash.rs
shelter-block/tests/: integration_tests.rs
shelter-cli/: CHANGELOG.md  Cargo.toml  README.md
shelter-cli/src/: main.rs
shelter-engine/: README.md
shelter-fs/: CHANGELOG.md  Cargo.toml  README.md
shelter-fs/src/: error.rs  lib.rs  repository.rs  time.rs
shelter-fs/src/filesystem/: dir_entry.rs  file.rs  file_blob.rs  file_content.rs  file_content_reader.rs  file_content_writer.rs  file_node.rs  file_node_reader.rs  file_node_writer.rs  file_type.rs  file_version.rs  metadata.rs  mod.rs  open_file.rs  open_options.rs  tree.rs
shelter-fs/src/repository/: config.rs
shelter-fs/tests/: fs_tests.rs
shelter-storage/: CHANGELOG.md  Cargo.toml  README.md
shelter-storage/src/: cipher.rs  crypto.rs  lib.rs  super_block.rs  vio.rs  xchacha.rs
shelter-storage/src/filesystem/: mod.rs
shelter-storage/src/memory/: mod.rs
shelter-storage/tests/: ft_tests.rs
