[workspace]
members = [
    # main crates, published on crates.io
    "fast-cdc",
    "shelter-storage",
    "shelter-block",
    "shelter-fs",
    "shelter-cli",
    "console",
    "console-dioxus",
]
default-members = [
    "shelter-fs",
]

[profile.release]
lto = true
panic = "abort"
opt-level = 'z'
strip = true
codegen-units = 1
