[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shelter-fs = { path = "../shelter-fs", version = "0.1" }
leptos = { version = "0.4.6", features = ["csr"] }
leptos-use = { version = "0.6.0", features = ["storage"] }
leptos_router = { version = "0.4.6", features = ["csr"] }
