[package]
name = "fast-cdc"
version = "0.1.0"
authors = ["Jacob ZAK"]
description = "A safe place for all your data"
keywords = [ "cryptography", "crypto" ]
categories = [ "cryptography" ]
edition = "2021"
rust-version = "1.66" # Update CI test along with this.
repository = "https://github.com/rusty-shelter/rusty-shelter"
license = "MPL-2.0"


[dependencies]
cdchunking = "1.0"


[dev-dependencies]
criterion = "0.5"
fake = "2.4"


[[bench]]
name = "fast_cdc"
harness = false
