[package]
name = "shelter-block"
version = "0.1.0"
authors = ["Jacob ZAK"]
description = "A safe place for all your data"
keywords = [ "cryptography", "crypto" ]
categories = [ "cryptography" ]
edition = "2021"
rust-version = "1.66" # Update CI test along with this.
repository = "https://github.com/rusty-shelter/rusty-shelter"
license = "MPL-2.0"

[dependencies]
multibase = "0.9"
unsigned-varint = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
blake3 = "1.0"
bincode = "1.3"
xid = "1.0"

[dev-dependencies]
criterion = "0.5"