[package]
name = "shelter-cli"
version = "0.1.0"
authors = ["Jacob ZAK"]
description = "A safe place for all your data"
keywords = [ "cryptography", "crypto" ]
categories = [ "cryptography" ]
edition = "2021"
rust-version = "1.66" # Update CI test along with this.
repository = "https://github.com/rusty-shelter/rusty-shelter"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
