[package]
name = "shelter-fs"
version = "0.1.0"
authors = ["Jacob ZAK"]
description = "A safe place for all your data"
keywords = [ "cryptography", "crypto" ]
categories = [ "cryptography" ]
edition = "2021"
rust-version = "1.66" # Update CI test along with this.
repository = "https://github.com/rusty-shelter/rusty-shelter"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
# machine-uid = "0.4"
crdt_tree = "0.0.16"
fast-cdc = { path = "../fast-cdc", version = "0.1" }
shelter-storage = { path = "../shelter-storage", version = "0.1" }
shelter-block = { path = "../shelter-block", version = "0.1" }
bitflags = "1.3"
data-encoding = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_derive = "1.0"
serde_with = "3.0"
orion = "0.17"
getrandom = { version = "0.2", features = ["js"] }
camino = { version = "1.0", features = ["serde1"] }
js-sys = "0.3"


[dev-dependencies]
criterion = "0.5"
