[package]
name = "shelter-storage"
version = "0.1.0"
authors = ["Jacob ZAK"]
description = "A safe place for all your data"
keywords = [ "cryptography", "crypto" ]
categories = [ "cryptography" ]
edition = "2021"
rust-version = "1.66" # Update CI test along with this.
repository = "https://github.com/rusty-shelter/rusty-shelter"
license = "MPL-2.0"

[dependencies]
orion = "0.17"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
moka = "0.11"
redis = { version = "0.23", optional = true }
